# hackathon-1-speckitplus

./: .dockerignore  .gitignore  Dockerfile  README.md
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh
Backend/: Dockerfile  README.md  ingest.py  main.py  pyproject.toml  requirements.txt
Backend/app/: config.py
Backend/app/core/: config.py  security.py
Backend/app/db/: connection.py  models.py  session.py
Backend/app/rag/: agent.py  qdrant.py  retrieval.py
Backend/app/routers/: __init__.py  ingestion.py  rag.py
history/prompts/001-docusaurus-book-structure/: 001-run-docusaurus-in-localhost.misc.prompt.md  (+1 more)
my-book/: .npmignore  docusaurus.config.ts  hf.yaml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
my-book/docs/: capstone-project.md  digital-twin-simulation.md  humanoid-robotics.md  introduction.md  nvidia-isaac.md  ros2-fundamentals.md  vla-systems.md  weekly-breakdown.md
specs/001-docusaurus-book-structure/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-huggingface-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-chatbot/: spec.md
specs/1-ros2-fundamentals-doc/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-digital-twin-simulation-doc/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/docusaurus-homepage/: plan.md  spec.md  tasks.md
(+86 files in other folders)
